# ndtv-dam

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_TASKS.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  render.yaml
assets/: adani1.avif  dfadnavis2.avif  raga4.avif  st3.avif  st4.avif
backend/: alembic.ini  clear_db.py  pyproject.toml  requirements-api.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_persons.py  002_create_organizations.py  003_create_person_organization_links.py  004_create_upload_batches.py  005_create_images.py  006_create_image_quality_scores.py  007_create_face_detections.py  008_create_face_recognitions.py  009_create_image_person_links.py  010_create_asset_variants.py  011_create_clip_embeddings.py  012_create_processing_logs.py  013_create_shortlisted_images.py  014_create_review_queue.py  015_add_semantic_tags_to_clip_embeddings.py  016_create_users.py  017_make_hashed_password_nullable.py  018_add_source_and_person_type_to_persons.py  019_add_logo_url_to_organizations.py  019_placeholder.py  020_add_editorial_metadata_to_images.py  020_placeholder.py
backend/app/: config.py  database.py  dependencies.py  main.py  worker.py
backend/app/models/: __init__.py  embedding_models.py  face_models.py  image_models.py  job_models.py  person_models.py  user_models.py  variant_models.py
backend/app/routers/: __init__.py  admin_router.py  asset_router.py  auth_router.py  batch_router.py  health_router.py  person_router.py  review_router.py  search_router.py  upload_router.py
backend/app/schemas/: __init__.py  asset_schemas.py  auth_schemas.py  batch_schemas.py  person_schemas.py  review_schemas.py  search_schemas.py  upload_schemas.py
backend/app/services/: auth_service.py  birefnet_service.py  clip_service.py  face_service.py  qdrant_service.py  storage_service.py
backend/app/tasks/: embedding_tasks.py  face_tasks.py  ingest_tasks.py  quality_tasks.py  variant_tasks.py
backend/tests/: conftest.py  test_face_service.py  test_health.py  test_persons.py  test_quality_scoring.py  test_review.py  test_upload.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
(+48 files in other folders)
