[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndtv-dam-backend"
version = "0.1.0"
description = "NDTV Digital Asset Management Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",

    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",

    # Task queue
    "celery[redis]==5.4.0",
    "redis==5.0.4",
    "flower==2.0.1",

    # Vector store
    "qdrant-client==1.9.1",

    # AI/ML
    "insightface==0.7.3",
    "onnxruntime==1.18.0",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "transformers==4.41.1",
    "open-clip-torch==2.24.0",
    "kornia>=0.7.0",
    "timm>=0.9.0",
    "einops>=0.7.0",

    # Image processing
    "Pillow==10.3.0",
    "imagehash==4.3.1",
    "opencv-python-headless==4.9.0.80",
    "numpy==1.26.4",

    # Configuration & validation
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",

    # Logging
    "structlog==24.2.0",

    # HTTP client
    "httpx==0.27.0",

    # Cloud storage (Cloudflare R2 / AWS S3-compatible)
    "boto3==1.34.131",

    # Background removal fallback (used when BiRefNet is unavailable)
    "rembg==2.0.57",

    # Utilities
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "aiofiles==23.2.1",

    # Monitoring
    "prometheus-fastapi-instrumentator==7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "aiosqlite==0.20.0",
    "ruff==0.4.4",
    "mypy==1.10.0",
    "factory-boy==3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
